# ax-swival

./: pyproject.toml
docs.md/: metaskills.md
docs/pages/: metaskills.html
swival/: agent.py  fmt.py  metaskills.py  session.py  skills.py  tools.py
tests/: test_fmt.py  test_large_output_preview.py  test_metaskills.py  test_repl.py  test_skills.py  test_think.py  test_todo.py
