[project]
name = "swival"
version = "1.0.14"
description = "A small, powerful CLI coding agent for open AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Frank Denis", email = "github@pureftpd.org" },
]
keywords = ["ai", "agent", "cli", "llm", "coding", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.83.14",
    "tiktoken>=0.12",
    "html-to-markdown>=3.3.2,<4",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
    "mcp>=1.27,<2",
    "rank-bm25>=0.2.2",
    "httpx>=0.28.1",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
    "fast-cipher>=0.2.1",
    "boto3>=1.43.3",
    "starlark-go>=1.0.0",
]

[project.urls]
Homepage = "https://swival.dev/"
Repository = "https://github.com/swival/swival"
Issues = "https://github.com/swival/swival/issues"

[project.scripts]
swival = "swival.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "swival/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "ChangeLog.md",
]
exclude = [
    "homebrew-tap/",
]

[tool.hatch.build.targets.wheel]
packages = ["swival"]

[tool.uv]
package = true
constraint-dependencies = ["requests>=2.33.1", "cryptography>=48.0.0"]
override-dependencies = ["aiohttp>=3.13.5", "python-dotenv>=1.2.2"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
website = [
    "markdown",
    "pillow",
]
